Stashcontext sa (#1297) (#1299)
* adding stash context for system indices



* adding stash context for system indices



---------


(cherry picked from commit e6884d6e0ee6af9bdf42c23d57c59e13f6145cdf)

Signed-off-by: Riya Saxena <riysaxen@amazon.com>
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>